Fix empty note spacing

--- a/src/styles/pages/sites/[site_id]/_overview.scss
+++ b/src/styles/pages/sites/[site_id]/_overview.scss
@@ -317,7 +317,7 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
-        height: calc(100% - 10rem);
+        height: calc(100% - 7rem);
         margin: 0 2rem 2rem 2rem;
 
         i {
